--- a/view/header.mustache
+++ b/view/header.mustache
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Animalia -- Home</title>
-    <link rel="stylesheet" type="text/css" href="public/styles.css">
+    <link rel="stylesheet" type="text/css" href="../public/styles.css">
     <link rel="icon" href="public/hornerito-panz-lirt.svg" type="image/x-icon">
 </head>
 <body>
