--- a/view/lobbyView.mustache
+++ b/view/lobbyView.mustache
@@ -1,13 +1,7 @@
-<div class="contenedor_cerrar_sesion">
-    <div class="caja bye centrado">
-        <p class="m mt">¿Te vas pibe?</p>
-        <a href="./index.php?controller=Lobby&method=cerrarSesion" class="boton m">cerrar sesión</a>
-    </div>
-</div>
-<div class="caja ">
+<div class="caja">
 
     <div class="caja-uno centrado mt ">
-        
+
         <h1>¡Bienvenido, {{user}}!</h1>
         <img src="public/hornerito-panzon-color.svg" alt="hornerito" id="hornerito">
         <p>PUNTAJE ALCANZADO : <span>{{puntaje}}</span> </p>
@@ -16,13 +10,21 @@
     </div>
 
     <div class="caja-dos centrado ">
-        <a href="./index.php?controller=Partida&method=mostrarPantallaPartida" class="boton boton-nueva-partida">Nueva partida</a>
+        <a href="./index.php?controller=Partida&method=mostrarPantallaPartida" class="boton boton-nueva-partida">Nueva
+            partida</a>
 
-        <a href="./index.php?controller=Ranking&method=mostrarPantallaRanking" class="boton boton-ver-ranking">Ver ranking</a>
+        <a href="./index.php?controller=Ranking&method=mostrarPantallaRanking" class="boton boton-ver-ranking">Ver
+            ranking</a>
 
         <!-- <button class="boton">
             <a href="./index.php?controller=Ranking&method=mostrarPantallaRanking">
                 Ver ranking</a>
-        </button> -->
+            </button> -->
+    </div>
+    <div class="contenedor_cerrar_sesion">
+        <div class="caja bye centrado">
+            <p class="m mt">¿Te vas pibe?</p>
+            <a href="./index.php?controller=Lobby&method=cerrarSesion" class="boton m">cerrar sesión</a>
+        </div>
     </div>
 </div>
