ya andan las urls con el nuevo formato. Modificaciones en el .htaccess

--- a/view/footer.mustache
+++ b/view/footer.mustache
@@ -1,6 +1,6 @@
 <footer>
     <div>
-        <img src="public/hornerito-panz-lirt.svg" alt="hornero" 
+        <img src="../public/hornerito-panz-lirt.svg" alt="hornero" 
         class="logo">
         <p >ARGENTINAZO</p>
         <p>Programacion Web II</p>
@@ -16,5 +16,5 @@
 </footer>
 
 </body>
-<script src="public/barratiempo.js"></script>
+<script src="../public/barratiempo.js"></script>
 </html>
