--- a/view/header.mustache
+++ b/view/header.mustache
@@ -4,18 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Animalia -- Home</title>
-    <link rel="stylesheet" type="text/css" href="public/styles.css">
-    <link rel="icon" href="public/hornerito-panz-lirt.svg" type="image/x-icon">
+    <link rel="stylesheet" type="text/css" href="../public/styles.css">
+    <link rel="icon" href="../public/hornerito-panz-lirt.svg" type="image/x-icon">
 </head>
 <body>
 
 <header class="header">
 
-    <a href="./index.php?controller=Lobby&method=mostrarPantallaLobby"><img src="public/hornerito-panz-lirt.svg" class="logo"></a>
+    <a href="/Lobby/mostrarPantallaLobby"><img src="../public/hornerito-panz-lirt.svg" class="logo"></a>
     <h1 class="nombre">Argentinazo: Hornero Editions</h1>
     <!-- ♠<svg></svg> -->
-    <a href="./index.php?controller=Perfil&method=mostrarPantallaPerfil"><img src="public/user.svg" class="account"></a>
-    
-
-    
+    <a href="/Perfil/mostrarPantallaPerfil"><img src="../public/user.svg" class="account"></a>
 </header>
