--- a/view/jugarPartidaView.mustache
+++ b/view/jugarPartidaView.mustache
@@ -15,7 +15,7 @@
     <div >
     {{#respuesta}}
     
-    <form action="./index.php?controller=Partida&method=verificarRespuesta" method="post" class="caja">
+    <form action="/Partida/verificarRespuesta" method="post" class="caja">
         
         <button type="submit" name="id" value="{{id}}" class="boton_respuesta">{{descripcion}}</button>
     </form>
