--- a/view/pantallaPerdedorView.mustache
+++ b/view/pantallaPerdedorView.mustache
@@ -5,6 +5,6 @@
     <p class="mt">LOOOSEERRRR</p>
 
     <p class="mt">PUNTAJE ALCANZADO = <span>{{puntaje}}</span></p>
-    <button class="mt boton"><a href="./index.php?controller=Lobby&method=mostrarPantallaLobby">VOLVER AL
+    <button class="mt boton"><a href="/Lobby/mostrarPantallaLobby">VOLVER AL
             LOBBBY</a></button>
 </div>
