--- a/view/perfilView.mustache
+++ b/view/perfilView.mustache
@@ -1,8 +1,8 @@
 <div class="contenedorPadre">
     <div class="botonera">
-        <button class="boton-sec ranking"><a href="./index.php?controller=Partida&method=mostrarPantallaPartida">Jugar otra vez</a></button>
-        <button class="boton-sec ranking"><a href="./index.php?controller=Ranking&method=mostrarPantallaRanking">Ranking</a></button>
-        <button class="boton-sec ranking"><a href="./index.php?controller=Animalia&method=mostrarPantallaInicial">Cerrar Sesión</a></button>
+        <button class="boton-sec ranking"><a href="/Partida/mostrarPantallaPartida">Jugar otra vez</a></button>
+        <button class="boton-sec ranking"><a href="/Ranking/mostrarPantallaRanking">Ranking</a></button>
+        <button class="boton-sec ranking"><a href="/Animalia/mostrarPantallaInicial">Cerrar Sesión</a></button>
     </div>
     <div class="perfil">
         <h1 class="centrado nombre ">Perfil</h1>
