--- a/view/jugarPartidaView.mustache
+++ b/view/jugarPartidaView.mustache
@@ -17,7 +17,7 @@
     
     <form action="/Partida/verificarRespuesta" method="post" class="caja">
         
-        <button type="submit" name="id" value="{{id}}" class="boton_respuesta">{{descripcion}}</button>
+        <button type="submit" name="id" value="{{id}}" class="boton_respuesta shadow-drop-center">{{descripcion}}</button>
     </form>
     
     {{/respuesta}}
