--- a/view/lobbyView.mustache
+++ b/view/lobbyView.mustache
@@ -3,7 +3,7 @@
 
     <div class="caja-uno centrado mt ">
 
-        <h1>¡Bienvenido, {{user}}!</h1>
+        <h1 class="scale-up-vertical-center">¡Bienvenido, {{user}}!</h1>
         <img src="../public/hornerito-panzon-color.svg" alt="hornerito" id="hornerito">
         <p>PUNTAJE ALCANZADO : <span>{{puntaje}}</span> </p>
 
