--- a/view/footer.mustache
+++ b/view/footer.mustache
@@ -2,7 +2,7 @@
     <div>
         <img src="../public/hornerito-panz-lirt.svg" alt="hornero" 
         class="logo">
-        <p >ARGENTINAZO</p>
+        <p class="shake-left-right">ARGENTINAZO</p>
         <p>Programacion Web II</p>
     </div>
     <div>
