--- a/view/perfilView.mustache
+++ b/view/perfilView.mustache
@@ -9,12 +9,15 @@
     
          {{#usuario}}
             <img src="{{foto_de_perfil}}" alt="">
-            <h1>Usuario: {{user_name}}</h1>
-            <h2>Nombre: {{nombre_completo}}</h2>
-            <h3>Fecha de nacimiento: {{anio_de_nacimiento}}</h3>
+            <p>Usuario: {{user_name}}</p>
+            <p>Nombre: {{nombre_completo}}</p>
+            <p>Fecha de nacimiento: {{anio_de_nacimiento}}</p>
             <p>Mail: {{mail}}</p>
-            
+            <p>Nivel: {{nivel}}</p>
          {{/usuario}} 
+         <button class="boton-sec">Editar perfil</button>
     </div>
-   
+   <div class="qr">
+
+   </div>
 </div>
