Error de QR fixed

--- a/view/rankingView.mustache
+++ b/view/rankingView.mustache
@@ -12,7 +12,7 @@
             <span> {{MAX(puntaje)}}</span><br>
             <div class="qr">
                 <!-- //Aca estaria el QR, AL HACER CLICK GENERA EL PDF DEL PERFIL Y LO MUESTRA EN OTRA PESTAÑA COMO UN ARCHIVO .PHP, guarda la url y los datos de usuario para renderizar -->
-                <a href="/Ranking/imprimirQR/{{user_name}}">Imprimir QR</a>
+                <a href="/Ranking/imprimirQR/{{user_name}}" target="_blank">Imprimir QR</a>
             </div>
         </div>
         
