QR funcionando en perfil

--- a/view/perfilEstaticoView.mustache
+++ b/view/perfilEstaticoView.mustache
@@ -15,7 +15,7 @@
             <p>Mail: {{mail}}</p>
             <p>Nivel: {{nivel}}</p>
         {{/usuario}} 
-        
+        <img src="../public/qr.png" alt="">
     </div>
    
 </div>
