--- a/view/rankingView.mustache
+++ b/view/rankingView.mustache
@@ -5,15 +5,16 @@
         <iframe src="https://giphy.com/embed/gxhU80is6fOKI" width="240" height="162" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
         {{#partida}}
         <div class="row">
-            <form action="/Perfil/mostrarPantallaPerfil" method="post">
+            <!-- <form action="/Perfil/mostrarPantallaPerfilNuevo" method="post"> -->
+            <form action="/Ranking/imprimirQR" method="post">
                 <input type="hidden" name="user" value="{{user_name}}">
                 <button class="user_name" type="submit" name="enviar">👑 {{user_name}}</button>
             </form>
             <span> {{MAX(puntaje)}}</span><br>
-            <div class="qr">
-                <!-- //Aca estaria el QR, AL HACER CLICK GENERA EL PDF DEL PERFIL Y LO MUESTRA EN OTRA PESTAÑA COMO UN ARCHIVO .PHP, guarda la url y los datos de usuario para renderizar -->
-                <a href="/Ranking/imprimirQR/{{user_name}}" target="_blank">Imprimir QR</a>
-            </div>
+            <!-- <div class="qr">
+                 //Aca estaria el QR, AL HACER CLICK GENERA EL PDF DEL PERFIL Y LO MUESTRA EN OTRA PESTAÑA COMO UN ARCHIVO .PHP, guarda la url y los datos de usuario para renderizar 
+                <a href="/Ranking/imprimirQR/{{user_name}}" target="_blank">QR</a>
+            </div> -->
         </div>
         
         {{/partida}}
