controlador revisa el rol de los users

--- a/view/lobbyadminView.mustache
+++ b/view/lobbyadminView.mustache
@@ -3,9 +3,8 @@
 
     <div class="caja-uno centrado mt ">
         <h1 class="scale-up-vertical-center">¡Bienvenido, {{user}}!</h1>
-        <img src="../public/hornerito-panzon-color.svg" alt="hornerito" id="hornerito">
-        <p>PUNTAJE ALCANZADO : <span>{{puntaje}}</span> </p>
-        <p>Nivel: <span> {{nivel}}</span> </p>
+        <img src="../public/epic-hornero-admin-.png" alt="hornerito" id="hornerito">
+       
         
 
     </div>
@@ -13,7 +12,7 @@
     <div class="caja-dos centrado ">
         <a href="/Partida/mostrarPantallaPartida" class="boton boton-nueva-partida">Nueva partida</a>
 
-        <a href="/Ranking/mostrarPantallaRanking" class="boton boton-ver-ranking">Ver ranking</a>
+        <
 
     </div>
 
