--- a/view/perfilEstaticoView.mustache
+++ b/view/perfilEstaticoView.mustache
@@ -8,7 +8,7 @@
         <h1 class="centrado nombre ">Perfil</h1>
     
         {{#usuario}}
-            <img src="{{foto_de_perfil}}" alt="">
+            <img src="{{foto_de_perfil}}" alt="foto de perfil del usuario">
             <p>Usuario: {{user_name}}</p>
             <p>Nombre: {{nombre_completo}}</p>
             <p>Fecha de nacimiento: {{anio_de_nacimiento}}</p>
