--- a/view/pantallaPerdedorView.mustache
+++ b/view/pantallaPerdedorView.mustache
@@ -3,7 +3,7 @@
     <h1 class="arcade">
         🤡  Game Over  🤡
     </h1>
-    <img src="../public/angry-hornero.png" alt="hornerito" id="horneritoEnojado" class="img">
+    <img src="../public/angry-hornero.svg" alt="hornerito" id="horneritoEnojado" class="img">
     <p >EL HORNERITO DICE : " YOU SER UN LOOOSEERRRR,ESTUDIA MÁS" </p>
     <p  class="m" id="puntaje">PUNTAJE ALCANZADO = <span>{{puntaje}}</span></p>
 
