--- a/view/lobbyeditorView.mustache
+++ b/view/lobbyeditorView.mustache
@@ -2,24 +2,27 @@
 <div class="caja ">
 
     <div class="caja-uno centrado mt ">
-        <h1 class="scale-up-vertical-center">¡Bienvenido, {{user}}!</h1>
-        <img src="../public/hornerito-panzon-color.svg" alt="hornerito" id="hornerito">
-        <p>PUNTAJE ALCANZADO : <span>{{puntaje}}</span> </p>
-        <p>Nivel: <span> {{nivel}}</span> </p>
+        <h2 class="scale-up-vertical-center">Nos honra recibirle</h2>
+        <h1 class="scale-up-vertical-center">Guardián del Conocimiento, {{user}}!</h1>
+        <img src="../public/epic-horenro-editor.svg" alt="hornerito" id="hornerito">
+
         
 
     </div>
 
     <div class="caja-dos centrado ">
-        <a href="/Partida/mostrarPantallaPartida" class="boton boton-nueva-partida">Nueva partida</a>
 
+        <a href="/Partida/mostrarPantallaPartida" class="boton boton-nueva-partida">Nueva partida</a>
         <a href="/Ranking/mostrarPantallaRanking" class="boton boton-ver-ranking">Ver ranking</a>
+        <a href="" class="boton ">Modificar  Preguntas Existentes</a>
+        <a href="" class="boton ">Revisar Preguntas Reportadas</a>
+        <a href="" class="boton ">Chequear Preguntas Sugeridas</a>
 
     </div>
 
     <div class="contenedor_cerrar_sesion">
     <div class="caja bye centrado">
-        <p class="m mt">¿Te vas pibe?</p>
+        <p class="m mt">¿A terminado su labor?</p>
         <a href="/Lobby/cerrarSesion" class="boton m">cerrar sesión</a>
     </div>
 </div>
