--- a/view/lobbyeditorView.mustache
+++ b/view/lobbyeditorView.mustache
@@ -12,17 +12,17 @@
 
     <div class="caja-dos centrado ">
 
-        <a href="/Partida/mostrarPantallaPartida" class="boton boton-nueva-partida">Nueva partida</a>
-        <a href="/Ranking/mostrarPantallaRanking" class="boton boton-ver-ranking">Ver ranking</a>
-        <a href="" class="boton ">Modificar  Preguntas Existentes</a>
-        <a href="" class="boton ">Revisar Preguntas Reportadas</a>
-        <a href="" class="boton ">Chequear Preguntas Sugeridas</a>
+        <a href="/Partida/mostrarPantallaPartida" class="botonEditor  boton-nueva-partida" >Nueva partida</a>
+        <a href="/Ranking/mostrarPantallaRanking" class="botonEditor  boton-ver-ranking" >Ver ranking</a>
+        <a href="" class="botonEditor " >Modificar  Preguntas Existentes</a>
+        <a href="" class="botonEditor" >Revisar Preguntas Reportadas</a>
+        <a href="" class="botonEditor" >Chequear Preguntas Sugeridas</a>
 
     </div>
 
     <div class="contenedor_cerrar_sesion">
     <div class="caja bye centrado">
-        <p class="m mt">¿A terminado su labor?</p>
+        <p class="m mt">¿Ha terminado su labor?</p>
         <a href="/Lobby/cerrarSesion" class="boton m">cerrar sesión</a>
     </div>
 </div>
