--- a/view/sugerenciaView.mustache
+++ b/view/sugerenciaView.mustache
@@ -1,27 +1,30 @@
-<div class="contenedor">
-    <div class="agregarPregunta">
-        <h1>Sugerir pregunta</h1>
-        <form action="" method="post">
-            <input type="text" placeholder="Ingrese su pregunta">
-            <select>
-                <legend>Seleccione la categoria</legend>
-                <option value="Cultura">Cultura</option>
-                <option value="Deporte">Deporte</option>
-                <option value="Historia">Historia</option>
-                <option value="Geografia">Geografia</option>
-                <option value="Ciencia">Ciencia</option>
-            </select>
-            <input type="text" placeholder="Ingrese una respuesta (Correcta)">
-            <input type="text" placeholder="Ingrese una respuesta">
-            <input type="text" placeholder="Ingrese una respuesta">
-            <input type="text" placeholder="Ingrese una respuesta">
-            <input class="boton-sec" type="submit" value="Confirmar">
-        </form>
+<div class="columnas">
+    <div class="formulario">
+        <div class="agregarPregunta">
+            <h1>Sugerir pregunta</h1>
+            <form action="" method="post">
+                <input class="sugerencia" type="text" placeholder="Ingrese su pregunta">
+                <select class="opcion">
+                    <legend>Seleccione la categoria</legend>
+                    <option value="Cultura">Cultura</option>
+                    <option value="Deporte">Deporte</option>
+                    <option value="Historia">Historia</option>
+                    <option value="Geografia">Geografia</option>
+                    <option value="Ciencia">Ciencia</option>
+                </select>
+                <input class="sugerencia" type="text" placeholder="Ingrese una respuesta (Correcta)">
+                <input class="sugerencia" type="text" placeholder="Ingrese una respuesta">
+                <input class="sugerencia" type="text" placeholder="Ingrese una respuesta">
+                <input class="sugerencia" type="text" placeholder="Ingrese una respuesta">
+                <input class="boton-sec" type="submit" value="Confirmar">
+            </form>
+        </div>
+        
     </div>
-    <div class="agregarCategoria">
+    <div class="formulario">
         <h1>Sugerir categoria</h1>
         <form action="" method="post">
-            <input type="text" placeholder="Ingrese una categoria">
+            <input class="sugerencia" type="text" placeholder="Ingrese una categoria">
             <input class="boton-sec" type="submit" value="Confirmar">
         </form>
     </div>
