--- a/view/perfilView.mustache
+++ b/view/perfilView.mustache
@@ -17,6 +17,6 @@
         {{/usuario}} 
         <a class="boton-sec">Editar perfil</a>
         <a href="/Perfil/mostrarPantallaSugerencias" class="boton-sec">Sugerir Pregunta</a>
-        <a class="boton-sec">Añadir categoría</a>
+        <a href="/Perfil/mostrarPantallaSugerencias" class="boton-sec">Añadir categoría</a>
     </div>
 </div>
