Mejora de interaccion

--- a/view/sugerenciaView.mustache
+++ b/view/sugerenciaView.mustache
@@ -23,9 +23,9 @@
     </div>
     <div class="formulario">
         <h1>Sugerir categoria</h1>
-        <form action="" method="post">
-            <input class="sugerencia" type="text" placeholder="Ingrese una categoria">
-            <input class="boton-sec" type="submit" value="Confirmar">
+        <form action="./Perfil/sugerirCategoria" method="post">
+            <input class="sugerencia" type="text" placeholder="Ingrese una categoria" name="categoria">
+            <input class="boton-sec" type="submit" value="Confirmar" name="enviar">
         </form>
     </div>
 </div>
