--- a/view/lobbyeditorView.mustache
+++ b/view/lobbyeditorView.mustache
@@ -16,7 +16,7 @@
         <a href="/Ranking/mostrarPantallaRanking" class="botonEditor  boton-ver-ranking" >Ver ranking</a>
         <a href="" class="botonEditor " >Modificar  Preguntas Existentes</a>
         <a href="" class="botonEditor" >Revisar Preguntas Reportadas</a>
-        <a href="" class="botonEditor" >Chequear Preguntas Sugeridas</a>
+        <a href="/Perfil/mostrarPantallaEditarSugerencias" class="botonEditor" >Chequear Preguntas Sugeridas</a>
 
     </div>
 
