--- a/public/styles.css
+++ b/public/styles.css
@@ -108,9 +108,8 @@ body {
     color: red;
 }
 
-.mensaje-registro{
+.mensajeConf{
     color: green;
-    text-align: center;
 }
 
 .formulario h3 {
