--- a/view/indexView.mustache
+++ b/view/indexView.mustache
@@ -1,4 +1,4 @@
-<p class="mensaje-registro">{{mensaje-registro-exitoso}}</p>
+
 <div class="contenedorPapa index"> 
     <div class="formulario">
         <h3>¿Todavía out? Empeza a jugar</h3>
@@ -37,6 +37,7 @@
 
             <input type="submit" value="Registrarse" class="boton registro" name="enviar">
             <p class="mensaje-error-registro">{{mensaje-error-registro}}</p>
+            <p class="mensajeConf">{{mensaje-registro-exitoso}}</p>
         </form>
     </div>
 
