Vista modificar preguntas lista

--- a/view/editarSugerenciasView.mustache
+++ b/view/editarSugerenciasView.mustache
@@ -7,5 +7,6 @@
 
     <div class="tabla">
         <h1>Últimas preguntas reportadas</h1>
+        <span></span> <button>Eliminar</button><button>Aprobar</button>
     </div>
 </div>
