--- a/view/editorPreguntasView.mustache
+++ b/view/editorPreguntasView.mustache
@@ -3,7 +3,8 @@
     
     <div class="pregunta">
         {{#pregunta}}
-        <p>{{descripcion}}</p> <button class="boton-sec">Modificar</button>
+        <span>{{descripcion}}</span><button class="boton-sec">Modificar</button><br>
+        <p></p> 
         {{/pregunta}}
     </div>
 </div>
