--- a/view/lobbyeditorView.mustache
+++ b/view/lobbyeditorView.mustache
@@ -1,5 +1,5 @@
 
-<div class="caja ">
+<div class="caja">
 
     <div class="caja-uno centrado mt ">
         <h2 class="scale-up-vertical-center">Nos honra recibirle</h2>
@@ -14,8 +14,8 @@
 
         <a href="/Partida/mostrarPantallaPartida" class="botonEditor  boton-nueva-partida" >Nueva partida</a>
         <a href="/Ranking/mostrarPantallaRanking" class="botonEditor  boton-ver-ranking" >Ver ranking</a>
-        <a href="" class="botonEditor " >Modificar  Preguntas Existentes</a>
-        <a href="" class="botonEditor" >Revisar Preguntas Reportadas</a>
+        <a href="/Perfil/editarPreguntas" class="botonEditor " >Modificar  Preguntas Existentes</a>
+        <a href="/Perfil/mostrarPantallaEditarSugerencias" class="botonEditor" >Revisar Preguntas Reportadas</a>
         <a href="/Perfil/mostrarPantallaEditarSugerencias" class="botonEditor" >Chequear Preguntas Sugeridas</a>
 
     </div>
