Sugerir pregunta ON

--- a/view/sugerenciaView.mustache
+++ b/view/sugerenciaView.mustache
@@ -23,7 +23,7 @@
     </div>
     <div class="formulario">
         <h1>Sugerir categoria</h1>
-        <form action="./Perfil/sugerirCategoria" method="post">
+        <form action="/Perfil/sugerirCategoria" method="post">
             <input class="sugerencia" type="text" placeholder="Ingrese una categoria" name="categoria">
             <input class="boton-sec" type="submit" value="Confirmar" name="enviar">
         </form>
