Sugerir categoria, pregunta y respuestas ON

--- a/view/sugerenciaView.mustache
+++ b/view/sugerenciaView.mustache
@@ -2,9 +2,9 @@
     <div class="formulario">
         <div class="agregarPregunta">
             <h1>Sugerir pregunta</h1>
-            <form action="./Perfil/sugerirPregunta" method="post">
-                <input class="sugerencia" type="text" placeholder="Ingrese su pregunta">
-                <select class="opcion">
+            <form action="/Perfil/sugerirPregunta" method="post">
+                <input class="sugerencia" type="text" placeholder="Ingrese su pregunta" name="pregunta">
+                <select class="opcion" name="categoria">
                     <legend>Seleccione la categoria</legend>
                     <option value="Cultura">Cultura</option>
                     <option value="Deporte">Deporte</option>
