--- a/view/jugarPartidaView.mustache
+++ b/view/jugarPartidaView.mustache
@@ -25,10 +25,13 @@
             <button class="trampita"> 🃏 </button>
         </div>
     </div>
+    {{#pregunta}}
     <form action="/Admin/reportarPregunta" method="post">
-        <input type="hidden" value="{{id}}" name="{{id}}">
-        <input class="boton-sec centro" type="submit" value="Reportar Pregunta">
+        <!-- Tengo que poner el name como quiera  el post y el value como estaria llamado en mustache -->
+        <input type="hidden" value="{{id}}" name="id">
+        <input class="boton-sec centro" type="submit" name="enviar" value="Reportar Pregunta">
     </form>
+    {{/pregunta}}
     <!-- <button class="boton-sec centro">Reportar Pregunta</button> -->
     
 </div>
