--- a/public/styles.css
+++ b/public/styles.css
@@ -168,9 +168,13 @@ select {
 }
 
 .tabla{
-    border: 1px solid white;
-    width: 500px;
-    height: 200px;
+    
+    width: 40%;
+    height: 50vh;
+    margin: 10px 10px;
+    padding: 20px;
+    background-color: rgba(131, 188, 215, 0.6644782913165266);
+    border-radius: 25px;
 }
 .opcion{
     width: 250px;
@@ -197,7 +201,26 @@ select {
 .boton-ver-ranking{
     background-color: rgba(71, 112, 192, 0.7989320728291316);
 }
-
+.add{
+    background-color: rgb(65, 227, 65);
+    padding: 5px;
+    margin: 0 5px;
+    border: none;
+    border-radius: 25px;
+}
+.delete{
+    background-color: rgb(227, 65, 65);
+    padding: 5px;
+    border: none;
+    border-radius: 25px;
+}
+.cancel{
+    background-color: rgb(165, 158, 158);
+    padding: 5px;
+    border: none;
+    margin: 0 5px;
+    border-radius: 25px;
+}
 .boton-sec {
     background-color: #FD79A8;
     color: white;
